# haskell_entertainment_system

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  haskell-entertainment-system.cabal
app/: Main.hs
src/: BitGet.hs  Bits.hs  CPU.hs  Cpu.hs  CpuExecution.hs  Emulator.hs  Instruction.hs  Instructions.hs  Main.hs  Mapper.hs  Memory.hs  MemoryBank.hs  NesFile.hs  ParseNesFile.hs  Rom.hs  SnakeGame.hs  Types.hs  Util.hs
tests/: Spec.hs
tests/nestest/: Main.hs
