cabal-version:      2.4
name:               haskell-entertainment-system
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lee Ehudin
maintainer:         percivalgambit@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Emulator SnakeGame

    default-extensions:
        DeriveGeneric
        FlexibleContexts
        DuplicateRecordFields
        InstanceSigs
        MultiWayIf
        NamedFieldPuns
        NoFieldSelectors
        OverloadedLabels
        OverloadedLists
        OverloadedStrings

    -- Modules included in this library but not exported.
    other-modules: Bits CPU Instructions Memory Rom Types

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        ImpredicativeTypes
        PatternSynonyms
        RankNTypes
    build-depends:
        base ^>=4.16.4.0,
        binary ^>=0.8.9.2,
        bytestring ^>= 0.11.5.3,
        composition-extra ^>= 2.1.0,
        generic-lens ^>= 2.2.2.0,
        hslogger ^>= 1.3.1.1,
        lens  ^>= 5.3.1,
        mtl ^>= 2.3.1,
        random ^>= 1.2.1.2,
        sdl2  ^>= 2.5.5.0,
        time ^>= 1.12
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-entertainment-system
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskell-entertainment-system

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

    Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hspec ^>=2.11.8,
        haskell-entertainment-system

    hs-source-dirs:   tests
    default-language: Haskell2010
